Silent code cleanup.